--- a/app/Resources/TwigBundle/views/Exception/error403.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error403.html.twig
@@ -1,30 +1,36 @@
-{#
-    This template is used to render errors of type HTTP 403 (Forbidden)
+<!DOCTYPE html>
+<html lang="en">
 
-    This is the simplest way to customize error pages in Symfony applications.
-    In case you need it, you can also hook into the internal exception handling
-    made by Symfony. This allows you to perform advanced tasks and even recover
-    your application from some errors.
-    See http://symfony.com/doc/current/cookbook/controller/error_pages.html
-#}
+<head>
 
-{% extends 'base.html.twig' %}
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-{% block body_id 'error' %}
+    <title>{{ 'http_error.name'|trans({ '%status_code%': 403 }) }}</title>
 
-{% block main %}
-    <h1 class="text-danger"><i class="fa fa-unlock-alt" aria-hidden="true"></i> {{ 'http_error.name'|trans({ '%status_code%': 403 }) }}</h1>
+    <!-- Bootstrap Core CSS -->
+    <link href="/source/manage/css/bootstrap.min.css" rel="stylesheet">
 
-    <p class="lead">
-        {{ 'http_error_403.description'|trans }}
-    </p>
-    <p>
-        {{ 'http_error_403.suggestion'|trans }}
-    </p>
-{% endblock %}
+</head>
 
-{% block sidebar %}
-    {{ parent() }}
+<body style="background-color:#fff">
 
-    {{ show_source_code(_self) }}
-{% endblock %}
+    <div class="container">
+      <img src="/source/change/img/adplog.png" style="margin-top:20px"/>
+        <div class="row">
+            <div class="col-md-4 col-md-offset-4" >
+              <h1 class="text-danger"><i class="fa fa-unlock-alt" aria-hidden="true"></i> {{ 'http_error.name'|trans({ '%status_code%': 403 }) }}</h1>
+              <p class="lead">
+                  {{ 'http_error_403.description'|trans }}
+              </p>
+            </div>
+        </div>
+    </div>
+<!-- popbox start-->
+
+</body>
+
+</html>
