--- a/src/Wechat/ApiBundle/Resources/views/Page/store.html.twig
+++ b/src/Wechat/ApiBundle/Resources/views/Page/store.html.twig
@@ -130,6 +130,9 @@ a:active {
 {% if storelog is defined and storelog %}
 				<img src="{{ storelog }}">
 {% endif %}
+{% if storemap is defined and storemap %}
+				<img src="{{ storemap }}">
+{% endif %}
 			</p>
   			<div id="map-canvas"></div>
   			<div id="edit">
