--- a/app/Resources/views/backendbase.html.twig
+++ b/app/Resources/views/backendbase.html.twig
@@ -26,7 +26,7 @@
     <script type="text/javascript" src="/source/manage/js/plugins/dataTables/jquery.dataTables.js"></script>
     <script type="text/javascript" src="/source/manage/js/plugins/dataTables/dataTables.bootstrap.js"></script>
     <script type="text/javascript" src="/source/manage/js/sb-admin-2.js"></script>
-    <script type="text/javascript" src="{{ asset('bundles/wechatapi/js/main.min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('bundles/wechatapi/js/main.js') }}"></script>
     <script type="text/javascript" src="{{ asset('bundles/wechatapi/js/tipsbox.min.js') }}"></script>
 {% endblock %}
 </head>
