--- a/src/Wechat/ApiBundle/Resources/views/Page/stores.html.twig
+++ b/src/Wechat/ApiBundle/Resources/views/Page/stores.html.twig
@@ -98,7 +98,7 @@
   </div>
    <div class="form-group">
      <label>Store Map:</label>
-     <input type="file" name="uploadfile" class="storemap">
+     <input type="file" name="uploadfile" class="newsfile">
    </div>
 </div>
 
@@ -147,7 +147,7 @@
        </div>
        <div class="form-group">
          <label>Store Map:</label>
-         <input type="file" name="uploadfile" class="storemap">
+         <input type="file" name="uploadfile" class="newsfile">
        </div>
     </div>
   </div>
