del baidu map css link;

--- a/src/Wechat/ApiBundle/Resources/views/Page/store.html.twig
+++ b/src/Wechat/ApiBundle/Resources/views/Page/store.html.twig
@@ -9,7 +9,7 @@
 	<meta name="format-detection" content="telephone=no">
 	<script type="text/javascript" src="/source/valention/js/jquery.js"></script>
 	<link rel="stylesheet" type="text/css" href="/source/valention/css/wx_shop.css">
-	<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=Z5FOXZbjH3AEIukiiRTtD7Xy"></script>
+	<!-- <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=Z5FOXZbjH3AEIukiiRTtD7Xy"></script> -->
 <style type="text/css">
 	*{
 		margin: 0;
