--- a/src/Wechat/ApiBundle/Resources/views/Page/store.html.twig
+++ b/src/Wechat/ApiBundle/Resources/views/Page/store.html.twig
@@ -117,7 +117,7 @@
 		{% if phone is defined and phone %}
 		<p>
 		    <em>电话：</em>
-		    <span><a href="tel:{{ phone }}">{{ phone }}</span>
+		    <span><a href="tel:{{ phone }}">{{ phone }}</a></span>
 		</p>
 		{% endif %}
 	</div>
