--- a/src/Wechat/ApiBundle/Resources/views/Page/store.html.twig
+++ b/src/Wechat/ApiBundle/Resources/views/Page/store.html.twig
@@ -9,78 +9,77 @@
 	<meta name="format-detection" content="telephone=no">
 	<script type="text/javascript" src="/source/valention/js/jquery.js"></script>
 	<link rel="stylesheet" type="text/css" href="/source/valention/css/wx_shop.css">
-	<!-- <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=Z5FOXZbjH3AEIukiiRTtD7Xy"></script> -->
-<style type="text/css">
-	*{
-		margin: 0;
-		padding: 0;
-	}
+	<style type="text/css">
+		*{
+			margin: 0;
+			padding: 0;
+		}
 
-	body{
-		font-size: 12px;
-		line-height: 16px;
-		color: #2a2a2a;
+		body{
+			font-size: 12px;
+			line-height: 16px;
+			color: #2a2a2a;
 
-		-webkit-font-smoothing: antialiased; 
-	    -webkit-tap-highlight-color: rgba(0,0,0,0);
-	    -webkit-tap-highlight: rgba(0,0,0,0);
-	    -webkit-text-size-adjust: none;
-	    overflow: -moz-scrollbars-vertical;
-	}
-	
-	a{
-		color: #2a2a2a;
-		text-decoration: none;
-	}
+			-webkit-font-smoothing: antialiased; 
+		    -webkit-tap-highlight-color: rgba(0,0,0,0);
+		    -webkit-tap-highlight: rgba(0,0,0,0);
+		    -webkit-text-size-adjust: none;
+		    overflow: -moz-scrollbars-vertical;
+		}
+		
+		a{
+			color: #2a2a2a;
+			text-decoration: none;
+		}
 
-	.header{
-		width: 100%;
-		padding: 18px 0;
-		text-align: center;
-	}
+		.header{
+			width: 100%;
+			padding: 18px 0;
+			text-align: center;
+		}
 
-	.info{
-		width: 100%;
-		margin: 15px 0;
-		display: inline-block;
-	}
+		.info{
+			width: 100%;
+			margin: 15px 0;
+			display: inline-block;
+		}
 
-	.info h1{
-		font-size: 22px;
-		width: 100%;
-		padding: 9px 0;
-		display: inline-block;
-	}
+		.info h1{
+			font-size: 22px;
+			width: 100%;
+			padding: 9px 0;
+			display: inline-block;
+		}
 
-	.info p{
-		width: 100%;
-		padding: 2px 0;
-		display: inline-block;
-	}
+		.info p{
+			width: 100%;
+			padding: 2px 0;
+			display: inline-block;
+		}
 
-	.info em{
-		font-style: normal;
-	}
+		.info em{
+			font-style: normal;
+		}
 
-	.map{
-		border: 5px #fff solid;
-		border-radius: 3px;
-		margin: 0 0 30px 0;
-	}
+		.map{
+			border: 5px #fff solid;
+			border-radius: 3px;
+			margin: 0 0 30px 0;
+		}
 
-	/*.info em{
-		width: 24%;
-		font-style: normal;
-		float: left;
-		display: inline-block;
-	}
+		/*.info em{
+			width: 24%;
+			font-style: normal;
+			float: left;
+			display: inline-block;
+		}
 
-	.info span{
-		width: 75%;
-		float: right;
-		display: inline-block;
-	}*/
-</style>
+		.info span{
+			width: 75%;
+			float: right;
+			display: inline-block;
+		}*/
+	</style>
 <body>
 <div class="header">
 	<img src="/vfile/img/logo.png" width="30%">
@@ -188,4 +187,10 @@
 			marker1.addEventListener("click", function(){this.openInfoWindow(infoWindow1);});
 			generateBaiduMapForShop();
 		}
-</script> -->
+</script>
+<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=Z5FOXZbjH3AEIukiiRTtD7Xy"></script> -->
+
+	</body>
+</html>
+
+
