--- a/src/Wechat/ApiBundle/Resources/views/Page/stores.html.twig
+++ b/src/Wechat/ApiBundle/Resources/views/Page/stores.html.twig
@@ -92,11 +92,11 @@
     <label>Brand Type:</label>
     <input class="form-control storebrandtype" placeholder="Enter Brand Type" style="width:80%">
   </div>
-  <div class="form-group">
+  <div class="form-group" id="storelog">
     <label>Store Log:</label>
     <input type="file" name="uploadfile" class="newsfile">
   </div>
-   <div class="form-group">
+   <div class="form-group" id="storemap">
      <label>Store Map:</label>
      <input type="file" name="uploadfile" class="newsfile">
    </div>
@@ -141,11 +141,11 @@
          <label>Brand Type:</label>
          <input class="form-control storebrandtype" placeholder="Enter Brand Type" style="width:80%">
        </div>
-       <div class="form-group">
+       <div class="form-group" id="storelog">
          <label>Store Log:</label>
          <input type="file" name="uploadfile" class="newsfile">
        </div>
-       <div class="form-group">
+       <div class="form-group" id="storemap">
          <label>Store Map:</label>
          <input type="file" name="uploadfile" class="newsfile">
        </div>
